Changes for 2.3.2

New features:
..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)

Bug fixes:
........S. [ZBX-8092] added disabled triggers to the configuration cache for correct macro expansion in notifications (igors)
........S. [ZBX-7901] improved value cache database operations when caching count based requests (wiper)
...G...PS. [ZBX-8172] fixed null JSON value decoding (wiper)
.......PS. [ZBX-8188] fixed IPMI items staying supported when sensor data becomes unavailable (asaveljevs, dimir)
..F....... [ZBX-8216] fixed screen import error (Andrejs)
..F....... [ZBX-8245] fixed repeating of actions while sorting / paging (Andrejs)
A.F....... [ZBX-5567] removed parameter "not_proxy_hosts" from hostgroup.get API method and frontend code (Krists)
..F....... [ZBX-8271] fixed importing of maps with LLD discovered hosts (Andrejs)

--------------------------------------------------------------------------------
Changes for 2.3.1

New features:
A.F....PS. [ZBXNEXT-282] implemented additional options and HTTP header support for web scenarios (dimir, Krists)
.......PS. [ZBXNEXT-2254] DBSchema configuration parameter now applies to PostgreSQL as well as IBM DB2 (Juris)
A.F....... [ZBX-1357] updated Japanese, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8276] fixed latest data filtering by name (Ivo)
A......... [ZBX-8195] fixed web scenario step validation for httptest.create and httptest.update API methods (Krists)
...G...PS. [ZBX-8172] fixed translation of \uxxxx sequences in JSON string values (wiper)
..F....... [ZBX-8241] fixed duplicate display of actions in media type list (Andrejs)
A.F....... [ZBX-8194] improved validation for web scenarios and web steps (Ivo, Krists)
...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)